Bug 1527293 - Loading a large script transferred with Content-Range from cache returns empty file, r=mayhemer

Differential Revision: https://phabricator.services.mozilla.com/D21403