netwerk/protocol/http/nsHttpChannel.cpp
@@ -5544,6 +5544,7 @@ nsresult nsHttpChannel::InstallCacheListener(int64_t offset) {
   if (rv == NS_ERROR_FILE_TOO_BIG) {
     LOG(("  entry would exceed max allowed size, not writing it [channel=%p]",
          this));
+    mCacheEntry->AsyncDoom(nullptr);
     return NS_OK;
   }
   if (NS_FAILED(rv)) return rv;
